// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Search Endpoints - Exact Ranking & Snapshot Validation GET /api/search/autocomplete should perfectly match ranking & results for autocomplete: "Basic Text Search" 1`] = `
{
  "data": {
    "predictedCategories": [
      "Wedding",
      "Anniversary",
      "Sangeet",
    ],
    "suggestions": [
      {
        "id": "cat:Anniversary",
        "score": 1.2,
        "title": "Anniversary",
        "type": "category",
      },
      {
        "id": "cat:Wedding",
        "score": 1.2,
        "title": "Wedding",
        "type": "category",
      },
      {
        "category": "6a22cc2f3abdcbf140beb4de",
        "id": "6a19cb169875c9a89386d920",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024558/eventdecor_migration/hgvuv234fqdoa2b05mul.jpg",
        "price": 1500,
        "score": 1.4,
        "slug": "wooden-wedding-ring-tray",
        "title": "Wooden Wedding Ring Tray",
        "type": "product",
      },
      {
        "category": "6a22cc2f3abdcbf140beb4db",
        "id": "6a0c75c89b8633afb920de8f",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024548/eventdecor_migration/qloanf6gi2facqdqvh0j.jpg",
        "price": 1999,
        "score": 0,
        "slug": "bangle-ceremony-tray",
        "title": "Bangle Ceremony Tray",
        "type": "product",
      },
      {
        "category": "6a22cc2f3abdcbf140beb4df",
        "id": "6a0c74fa9b8633afb920de7b",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024546/eventdecor_migration/dakfqhkzlgqw5vjkfg6v.jpg",
        "price": 1500,
        "score": 0,
        "slug": "floral-jewelry-tray",
        "title": "Floral Jewelry Tray",
        "type": "product",
      },
    ],
  },
  "success": true,
}
`;

exports[`Search Endpoints - Exact Ranking & Snapshot Validation GET /api/search/autocomplete should perfectly match ranking & results for autocomplete: "Budget Search" 1`] = `
{
  "data": {
    "predictedCategories": [
      "Wedding",
      "Anniversary",
      "Sangeet",
    ],
    "suggestions": [
      {
        "id": "cat:Anniversary",
        "score": 1.2,
        "title": "Anniversary",
        "type": "category",
      },
      {
        "id": "cat:Wedding",
        "score": 1.2,
        "title": "Wedding",
        "type": "category",
      },
      {
        "category": "6a22cc2f3abdcbf140beb4dc",
        "id": "6a11579708fa7569dfc015a0",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024555/eventdecor_migration/sxglj11lgi99fwxij9bp.jpg",
        "price": 999,
        "score": 0.4,
        "slug": "beaded-coconut-decor",
        "title": "Beaded Coconut Decor",
        "type": "product",
      },
      {
        "category": "6a22cc2f3abdcbf140beb4dc",
        "id": "6a0c764b9b8633afb920deb4",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024549/eventdecor_migration/os7ab4jtrh8y5vikq3z2.jpg",
        "price": 750,
        "score": 0.4,
        "slug": "green-coconut-decor",
        "title": "Green Coconut Decor",
        "type": "product",
      },
      {
        "category": "6a22cc2f3abdcbf140beb4dc",
        "id": "6a41a43d14ed694d37335f7b",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1782685808/siri-arts-crafts/products/jr2ztikig9junxhzq70j.jpg",
        "price": 899,
        "score": 0.4,
        "slug": "pearl-coconut-decor",
        "title": "Pearl Coconut Decor",
        "type": "product",
      },
    ],
  },
  "success": true,
}
`;

exports[`Search Endpoints - Exact Ranking & Snapshot Validation GET /api/search/autocomplete should perfectly match ranking & results for autocomplete: "Color + Tag Filter Search" 1`] = `
{
  "data": {
    "predictedCategories": [
      "Wedding",
      "Floral",
      "Stage",
    ],
    "suggestions": [
      {
        "id": "cat:Floral",
        "score": 1.2,
        "title": "Floral",
        "type": "category",
      },
      {
        "id": "cat:Wedding",
        "score": 1.2,
        "title": "Wedding",
        "type": "category",
      },
      {
        "id": "intent:Bridal Entry",
        "score": 1.1,
        "title": "Bridal Entry",
        "type": "suggestion",
      },
      {
        "id": "intent:Wedding Garlands",
        "score": 1.1,
        "title": "Wedding Garlands",
        "type": "suggestion",
      },
      {
        "id": "intent:Wedding Stage Decor",
        "score": 1.1,
        "title": "Wedding Stage Decor",
        "type": "suggestion",
      },
    ],
  },
  "success": true,
}
`;

exports[`Search Endpoints - Exact Ranking & Snapshot Validation GET /api/search/autocomplete should perfectly match ranking & results for autocomplete: "Telugu Script Search" 1`] = `
{
  "data": {
    "correctedQuery": "wedding డెకరేషన్",
    "predictedCategories": [
      "Wedding",
    ],
    "suggestions": [
      {
        "id": "cat:Wedding",
        "score": 1.2,
        "title": "Wedding",
        "type": "category",
      },
      {
        "category": "6a22cc2f3abdcbf140beb4db",
        "id": "6a0c75c89b8633afb920de8f",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024548/eventdecor_migration/qloanf6gi2facqdqvh0j.jpg",
        "price": 1999,
        "score": 0,
        "slug": "bangle-ceremony-tray",
        "title": "Bangle Ceremony Tray",
        "type": "product",
      },
      {
        "category": "6a22cc2f3abdcbf140beb4df",
        "id": "6a0c74fa9b8633afb920de7b",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024546/eventdecor_migration/dakfqhkzlgqw5vjkfg6v.jpg",
        "price": 1500,
        "score": 0,
        "slug": "floral-jewelry-tray",
        "title": "Floral Jewelry Tray",
        "type": "product",
      },
      {
        "category": "6a22cc2f3abdcbf140beb4de",
        "id": "6a0d5c8ec725a13dd9a95618",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024554/eventdecor_migration/z9ae90bxj0n3bflsiqod.jpg",
        "price": 2000,
        "score": 0,
        "slug": "floral-ring-tray",
        "title": "Floral Ring Tray",
        "type": "product",
      },
      {
        "category": "6a22cc2f3abdcbf140beb4dc",
        "id": "6a0c764b9b8633afb920deb4",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024549/eventdecor_migration/os7ab4jtrh8y5vikq3z2.jpg",
        "price": 750,
        "score": 0,
        "slug": "green-coconut-decor",
        "title": "Green Coconut Decor",
        "type": "product",
      },
    ],
  },
  "success": true,
}
`;

exports[`Search Endpoints - Exact Ranking & Snapshot Validation GET /api/search/autocomplete should perfectly match ranking & results for autocomplete: "Transliterated Telugu Search" 1`] = `
{
  "data": {
    "correctedQuery": "wedding decoration",
    "predictedCategories": [
      "Wedding",
    ],
    "suggestions": [
      {
        "id": "cat:Wedding",
        "score": 1.2,
        "title": "Wedding",
        "type": "category",
      },
      {
        "category": "6a22cc2f3abdcbf140beb4db",
        "id": "6a0c75c89b8633afb920de8f",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024548/eventdecor_migration/qloanf6gi2facqdqvh0j.jpg",
        "price": 1999,
        "score": 0,
        "slug": "bangle-ceremony-tray",
        "title": "Bangle Ceremony Tray",
        "type": "product",
      },
      {
        "category": "6a22cc2f3abdcbf140beb4df",
        "id": "6a0c74fa9b8633afb920de7b",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024546/eventdecor_migration/dakfqhkzlgqw5vjkfg6v.jpg",
        "price": 1500,
        "score": 0,
        "slug": "floral-jewelry-tray",
        "title": "Floral Jewelry Tray",
        "type": "product",
      },
      {
        "category": "6a22cc2f3abdcbf140beb4de",
        "id": "6a0d5c8ec725a13dd9a95618",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024554/eventdecor_migration/z9ae90bxj0n3bflsiqod.jpg",
        "price": 2000,
        "score": 0,
        "slug": "floral-ring-tray",
        "title": "Floral Ring Tray",
        "type": "product",
      },
      {
        "category": "6a22cc2f3abdcbf140beb4dc",
        "id": "6a0c764b9b8633afb920deb4",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024549/eventdecor_migration/os7ab4jtrh8y5vikq3z2.jpg",
        "price": 750,
        "score": 0,
        "slug": "green-coconut-decor",
        "title": "Green Coconut Decor",
        "type": "product",
      },
    ],
  },
  "success": true,
}
`;

exports[`Search Endpoints - Exact Ranking & Snapshot Validation GET /api/v1/search/results should perfectly match ranking & results for full search: "Basic Text Search" 1`] = `
{
  "data": {
    "expertResponse": "Here are some stunning wedding decoration ideas for your ceremony. You can filter them by budget using the price controls.",
    "intentSummary": "Wedding Ideas",
    "isFallback": false,
    "items": [],
    "limit": 10,
    "page": 1,
    "predictedCategories": [
      "Wedding",
    ],
    "query": "wedding",
    "recommendations": {
      "bestMatches": [],
      "budgetFriendly": [],
      "popularChoices": [],
      "similarIdeas": [],
      "trending": [],
    },
    "total": 0,
  },
  "success": true,
}
`;

exports[`Search Endpoints - Exact Ranking & Snapshot Validation GET /api/v1/search/results should perfectly match ranking & results for full search: "Budget Search" 1`] = `
{
  "data": {
    "expertResponse": "I've put together some beautiful wedding selections under ₹50,000 that fit your budget perfectly. Let me know if you would like to customize these!",
    "intentSummary": "Wedding under ₹50,000",
    "isFallback": false,
    "items": [
      {
        "id": "6a11579708fa7569dfc015a0",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024555/eventdecor_migration/sxglj11lgi99fwxij9bp.jpg",
        "matchSource": "fuzzy",
        "price": 999,
        "rating": 0,
        "reviews": 0,
        "score": 0.8,
        "slug": "beaded-coconut-decor",
        "tags": [
          "Coconut Decor",
          "Beaded Decor",
          "kobbari bondam",
          "kobbari decor",
          "pooja kobbari",
          "coconut decor",
          "beaded coconut",
          "shadi decor",
          "Wedding",
          "Festival",
          "Pooja",
        ],
        "title": "Beaded Coconut Decor",
        "type": "product",
      },
      {
        "id": "6a0c764b9b8633afb920deb4",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024549/eventdecor_migration/os7ab4jtrh8y5vikq3z2.jpg",
        "matchSource": "fuzzy",
        "price": 750,
        "rating": 0,
        "reviews": 0,
        "score": 0.8,
        "slug": "green-coconut-decor",
        "tags": [
          "Coconut Decor",
          "Wedding Decor",
        ],
        "title": "Green Coconut Decor",
        "type": "product",
      },
      {
        "id": "6a41a43d14ed694d37335f7b",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1782685808/siri-arts-crafts/products/jr2ztikig9junxhzq70j.jpg",
        "matchSource": "fuzzy",
        "price": 899,
        "rating": 0,
        "reviews": 0,
        "score": 0.8,
        "slug": "pearl-coconut-decor",
        "tags": [
          "Coconut Decor",
          "Wedding Decor",
          "Pearl Embellished",
          "kobbari bondam",
          "kobbari decor",
          "muthyala kobbari",
          "pearl coconut decor",
          "coconut decoration",
          "wedding nariyal",
          "Wedding",
          "Pooja",
          "Festival",
        ],
        "title": "Pearl Coconut Decor",
        "type": "product",
      },
      {
        "id": "6a41a863c091bcebec0d6e87",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1782687607/siri-arts-crafts/products/vranceopqrty0jxgas7j.jpg",
        "matchSource": "fuzzy",
        "price": 1999,
        "rating": 0,
        "reviews": 0,
        "score": 0.52,
        "slug": "mirror-floral-ring-tray",
        "tags": [
          "Wedding Decor",
          "Ring Tray",
          "మిర్రర్ పూల రింగ్ ట్రే",
          "వివాహ రింగ్ ట్రే",
          "నిశ్చితార్థం రింగ్ ట్రే",
          "mirror floral ring plate",
          "wedding ring tray with mirror",
          "engagement ring plate",
          "Wedding",
          "Engagement",
        ],
        "title": "Mirror Floral Ring Tray",
        "type": "product",
      },
      {
        "id": "6a0c75c89b8633afb920de8f",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024548/eventdecor_migration/qloanf6gi2facqdqvh0j.jpg",
        "matchSource": "fuzzy",
        "price": 1999,
        "rating": 0,
        "reviews": 0,
        "score": 0.4,
        "slug": "bangle-ceremony-tray",
        "tags": [
          "Bangle Ceremony",
          "Wedding Decor",
          "Indian Traditional",
        ],
        "title": "Bangle Ceremony Tray",
        "type": "product",
      },
      {
        "id": "6a0d5c8ec725a13dd9a95618",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024554/eventdecor_migration/z9ae90bxj0n3bflsiqod.jpg",
        "matchSource": "fuzzy",
        "price": 2000,
        "rating": 0,
        "reviews": 0,
        "score": 0.4,
        "slug": "floral-ring-tray",
        "tags": [
          "Wedding Decor",
          "Ring Tray",
        ],
        "title": "Floral Ring Tray",
        "type": "product",
      },
    ],
    "limit": 10,
    "page": 1,
    "predictedCategories": [
      "Wedding",
    ],
    "query": "wedding decor under 50k",
    "recommendations": {
      "bestMatches": [
        {
          "id": "6a11579708fa7569dfc015a0",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024555/eventdecor_migration/sxglj11lgi99fwxij9bp.jpg",
          "matchSource": "fuzzy",
          "price": 999,
          "rating": 0,
          "reviews": 0,
          "score": 0.8,
          "slug": "beaded-coconut-decor",
          "tags": [
            "Coconut Decor",
            "Beaded Decor",
            "kobbari bondam",
            "kobbari decor",
            "pooja kobbari",
            "coconut decor",
            "beaded coconut",
            "shadi decor",
            "Wedding",
            "Festival",
            "Pooja",
          ],
          "title": "Beaded Coconut Decor",
          "type": "product",
        },
        {
          "id": "6a0c764b9b8633afb920deb4",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024549/eventdecor_migration/os7ab4jtrh8y5vikq3z2.jpg",
          "matchSource": "fuzzy",
          "price": 750,
          "rating": 0,
          "reviews": 0,
          "score": 0.8,
          "slug": "green-coconut-decor",
          "tags": [
            "Coconut Decor",
            "Wedding Decor",
          ],
          "title": "Green Coconut Decor",
          "type": "product",
        },
        {
          "id": "6a41a43d14ed694d37335f7b",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1782685808/siri-arts-crafts/products/jr2ztikig9junxhzq70j.jpg",
          "matchSource": "fuzzy",
          "price": 899,
          "rating": 0,
          "reviews": 0,
          "score": 0.8,
          "slug": "pearl-coconut-decor",
          "tags": [
            "Coconut Decor",
            "Wedding Decor",
            "Pearl Embellished",
            "kobbari bondam",
            "kobbari decor",
            "muthyala kobbari",
            "pearl coconut decor",
            "coconut decoration",
            "wedding nariyal",
            "Wedding",
            "Pooja",
            "Festival",
          ],
          "title": "Pearl Coconut Decor",
          "type": "product",
        },
        {
          "id": "6a41a863c091bcebec0d6e87",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1782687607/siri-arts-crafts/products/vranceopqrty0jxgas7j.jpg",
          "matchSource": "fuzzy",
          "price": 1999,
          "rating": 0,
          "reviews": 0,
          "score": 0.52,
          "slug": "mirror-floral-ring-tray",
          "tags": [
            "Wedding Decor",
            "Ring Tray",
            "మిర్రర్ పూల రింగ్ ట్రే",
            "వివాహ రింగ్ ట్రే",
            "నిశ్చితార్థం రింగ్ ట్రే",
            "mirror floral ring plate",
            "wedding ring tray with mirror",
            "engagement ring plate",
            "Wedding",
            "Engagement",
          ],
          "title": "Mirror Floral Ring Tray",
          "type": "product",
        },
      ],
      "budgetFriendly": [
        {
          "id": "6a0c764b9b8633afb920deb4",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024549/eventdecor_migration/os7ab4jtrh8y5vikq3z2.jpg",
          "matchSource": "fuzzy",
          "price": 750,
          "rating": 0,
          "reviews": 0,
          "score": 0.8,
          "slug": "green-coconut-decor",
          "tags": [
            "Coconut Decor",
            "Wedding Decor",
          ],
          "title": "Green Coconut Decor",
          "type": "product",
        },
        {
          "id": "6a41a43d14ed694d37335f7b",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1782685808/siri-arts-crafts/products/jr2ztikig9junxhzq70j.jpg",
          "matchSource": "fuzzy",
          "price": 899,
          "rating": 0,
          "reviews": 0,
          "score": 0.8,
          "slug": "pearl-coconut-decor",
          "tags": [
            "Coconut Decor",
            "Wedding Decor",
            "Pearl Embellished",
            "kobbari bondam",
            "kobbari decor",
            "muthyala kobbari",
            "pearl coconut decor",
            "coconut decoration",
            "wedding nariyal",
            "Wedding",
            "Pooja",
            "Festival",
          ],
          "title": "Pearl Coconut Decor",
          "type": "product",
        },
        {
          "id": "6a11579708fa7569dfc015a0",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024555/eventdecor_migration/sxglj11lgi99fwxij9bp.jpg",
          "matchSource": "fuzzy",
          "price": 999,
          "rating": 0,
          "reviews": 0,
          "score": 0.8,
          "slug": "beaded-coconut-decor",
          "tags": [
            "Coconut Decor",
            "Beaded Decor",
            "kobbari bondam",
            "kobbari decor",
            "pooja kobbari",
            "coconut decor",
            "beaded coconut",
            "shadi decor",
            "Wedding",
            "Festival",
            "Pooja",
          ],
          "title": "Beaded Coconut Decor",
          "type": "product",
        },
        {
          "id": "6a41a863c091bcebec0d6e87",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1782687607/siri-arts-crafts/products/vranceopqrty0jxgas7j.jpg",
          "matchSource": "fuzzy",
          "price": 1999,
          "rating": 0,
          "reviews": 0,
          "score": 0.52,
          "slug": "mirror-floral-ring-tray",
          "tags": [
            "Wedding Decor",
            "Ring Tray",
            "మిర్రర్ పూల రింగ్ ట్రే",
            "వివాహ రింగ్ ట్రే",
            "నిశ్చితార్థం రింగ్ ట్రే",
            "mirror floral ring plate",
            "wedding ring tray with mirror",
            "engagement ring plate",
            "Wedding",
            "Engagement",
          ],
          "title": "Mirror Floral Ring Tray",
          "type": "product",
        },
      ],
      "popularChoices": [
        {
          "id": "6a11579708fa7569dfc015a0",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024555/eventdecor_migration/sxglj11lgi99fwxij9bp.jpg",
          "matchSource": "fuzzy",
          "price": 999,
          "rating": 0,
          "reviews": 0,
          "score": 0.8,
          "slug": "beaded-coconut-decor",
          "tags": [
            "Coconut Decor",
            "Beaded Decor",
            "kobbari bondam",
            "kobbari decor",
            "pooja kobbari",
            "coconut decor",
            "beaded coconut",
            "shadi decor",
            "Wedding",
            "Festival",
            "Pooja",
          ],
          "title": "Beaded Coconut Decor",
          "type": "product",
        },
        {
          "id": "6a0c764b9b8633afb920deb4",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024549/eventdecor_migration/os7ab4jtrh8y5vikq3z2.jpg",
          "matchSource": "fuzzy",
          "price": 750,
          "rating": 0,
          "reviews": 0,
          "score": 0.8,
          "slug": "green-coconut-decor",
          "tags": [
            "Coconut Decor",
            "Wedding Decor",
          ],
          "title": "Green Coconut Decor",
          "type": "product",
        },
        {
          "id": "6a41a43d14ed694d37335f7b",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1782685808/siri-arts-crafts/products/jr2ztikig9junxhzq70j.jpg",
          "matchSource": "fuzzy",
          "price": 899,
          "rating": 0,
          "reviews": 0,
          "score": 0.8,
          "slug": "pearl-coconut-decor",
          "tags": [
            "Coconut Decor",
            "Wedding Decor",
            "Pearl Embellished",
            "kobbari bondam",
            "kobbari decor",
            "muthyala kobbari",
            "pearl coconut decor",
            "coconut decoration",
            "wedding nariyal",
            "Wedding",
            "Pooja",
            "Festival",
          ],
          "title": "Pearl Coconut Decor",
          "type": "product",
        },
        {
          "id": "6a41a863c091bcebec0d6e87",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1782687607/siri-arts-crafts/products/vranceopqrty0jxgas7j.jpg",
          "matchSource": "fuzzy",
          "price": 1999,
          "rating": 0,
          "reviews": 0,
          "score": 0.52,
          "slug": "mirror-floral-ring-tray",
          "tags": [
            "Wedding Decor",
            "Ring Tray",
            "మిర్రర్ పూల రింగ్ ట్రే",
            "వివాహ రింగ్ ట్రే",
            "నిశ్చితార్థం రింగ్ ట్రే",
            "mirror floral ring plate",
            "wedding ring tray with mirror",
            "engagement ring plate",
            "Wedding",
            "Engagement",
          ],
          "title": "Mirror Floral Ring Tray",
          "type": "product",
        },
      ],
      "similarIdeas": [
        {
          "id": "6a11579708fa7569dfc015a0",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024555/eventdecor_migration/sxglj11lgi99fwxij9bp.jpg",
          "matchSource": "fuzzy",
          "price": 999,
          "rating": 0,
          "reviews": 0,
          "score": 0.8,
          "slug": "beaded-coconut-decor",
          "tags": [
            "Coconut Decor",
            "Beaded Decor",
            "kobbari bondam",
            "kobbari decor",
            "pooja kobbari",
            "coconut decor",
            "beaded coconut",
            "shadi decor",
            "Wedding",
            "Festival",
            "Pooja",
          ],
          "title": "Beaded Coconut Decor",
          "type": "product",
        },
        {
          "id": "6a0c764b9b8633afb920deb4",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024549/eventdecor_migration/os7ab4jtrh8y5vikq3z2.jpg",
          "matchSource": "fuzzy",
          "price": 750,
          "rating": 0,
          "reviews": 0,
          "score": 0.8,
          "slug": "green-coconut-decor",
          "tags": [
            "Coconut Decor",
            "Wedding Decor",
          ],
          "title": "Green Coconut Decor",
          "type": "product",
        },
        {
          "id": "6a41a43d14ed694d37335f7b",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1782685808/siri-arts-crafts/products/jr2ztikig9junxhzq70j.jpg",
          "matchSource": "fuzzy",
          "price": 899,
          "rating": 0,
          "reviews": 0,
          "score": 0.8,
          "slug": "pearl-coconut-decor",
          "tags": [
            "Coconut Decor",
            "Wedding Decor",
            "Pearl Embellished",
            "kobbari bondam",
            "kobbari decor",
            "muthyala kobbari",
            "pearl coconut decor",
            "coconut decoration",
            "wedding nariyal",
            "Wedding",
            "Pooja",
            "Festival",
          ],
          "title": "Pearl Coconut Decor",
          "type": "product",
        },
        {
          "id": "6a41a863c091bcebec0d6e87",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1782687607/siri-arts-crafts/products/vranceopqrty0jxgas7j.jpg",
          "matchSource": "fuzzy",
          "price": 1999,
          "rating": 0,
          "reviews": 0,
          "score": 0.52,
          "slug": "mirror-floral-ring-tray",
          "tags": [
            "Wedding Decor",
            "Ring Tray",
            "మిర్రర్ పూల రింగ్ ట్రే",
            "వివాహ రింగ్ ట్రే",
            "నిశ్చితార్థం రింగ్ ట్రే",
            "mirror floral ring plate",
            "wedding ring tray with mirror",
            "engagement ring plate",
            "Wedding",
            "Engagement",
          ],
          "title": "Mirror Floral Ring Tray",
          "type": "product",
        },
      ],
      "trending": [
        {
          "id": "6a0c75c89b8633afb920de8f",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024548/eventdecor_migration/qloanf6gi2facqdqvh0j.jpg",
          "matchSource": "fuzzy",
          "price": 1999,
          "rating": 0,
          "reviews": 0,
          "score": 0.4,
          "slug": "bangle-ceremony-tray",
          "tags": [
            "Bangle Ceremony",
            "Wedding Decor",
            "Indian Traditional",
          ],
          "title": "Bangle Ceremony Tray",
          "type": "product",
        },
        {
          "id": "6a0d5c8ec725a13dd9a95618",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024554/eventdecor_migration/z9ae90bxj0n3bflsiqod.jpg",
          "matchSource": "fuzzy",
          "price": 2000,
          "rating": 0,
          "reviews": 0,
          "score": 0.4,
          "slug": "floral-ring-tray",
          "tags": [
            "Wedding Decor",
            "Ring Tray",
          ],
          "title": "Floral Ring Tray",
          "type": "product",
        },
      ],
    },
    "total": 6,
  },
  "success": true,
}
`;

exports[`Search Endpoints - Exact Ranking & Snapshot Validation GET /api/v1/search/results should perfectly match ranking & results for full search: "Color + Tag Filter Search" 1`] = `
{
  "data": {
    "expertResponse": "I couldn't find exact matches for your search "yellow flowers wedding stage". However, as an event planning expert, I have gathered some of our most popular items, new arrivals, and collections that you can check out!",
    "intentSummary": "Wedding Ideas",
    "isFallback": true,
    "items": [],
    "limit": 10,
    "page": 1,
    "predictedCategories": [],
    "query": "yellow flowers wedding stage",
    "recommendations": {
      "bestMatches": [
        {
          "id": "6a0c74fa9b8633afb920de7b",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024546/eventdecor_migration/dakfqhkzlgqw5vjkfg6v.jpg",
          "matchSource": "fallback_popular",
          "price": 1500,
          "score": 1,
          "slug": "floral-jewelry-tray",
          "title": "Floral Jewelry Tray",
          "type": "product",
        },
        {
          "id": "6a0c764b9b8633afb920deb4",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024549/eventdecor_migration/os7ab4jtrh8y5vikq3z2.jpg",
          "matchSource": "fallback_popular",
          "price": 750,
          "score": 1,
          "slug": "green-coconut-decor",
          "title": "Green Coconut Decor",
          "type": "product",
        },
        {
          "id": "6a3c31738d7a02cb71a1f5ae",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1782329628/siri-arts-crafts/products/vvuj6q3p1ynudews1f8k.jpg",
          "matchSource": "fallback_popular",
          "price": 999,
          "score": 1,
          "slug": "chocolate-gift-favors",
          "title": "Chocolate Gift Favors",
          "type": "product",
        },
        {
          "id": "6a42df9df2886846ac840216",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1782767385/siri-arts-crafts/products/eposyswutxwdhpcrs2kc.jpg",
          "matchSource": "fallback_popular",
          "price": 2999,
          "score": 1,
          "slug": "pooja-thali-arrangement",
          "title": "Pooja Thali Arrangement",
          "type": "product",
        },
      ],
      "budgetFriendly": [
        {
          "id": "6a427f1ea58275793b459dcc",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1782741719/siri-arts-crafts/products/mpr0nhgl6tt11j0c7e1q.jpg",
          "matchSource": "fallback_new",
          "price": 999,
          "score": 1,
          "slug": "gold-floral-tray",
          "title": "Gold Floral Tray",
          "type": "product",
        },
        {
          "id": "6a41ae6ac091bcebec0d7131",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1782689703/siri-arts-crafts/products/edaruw2yw9yugnb6gbef.jpg",
          "matchSource": "fallback_new",
          "price": 1299,
          "score": 1,
          "slug": "pink-lotus-flower-tray",
          "title": "Pink Lotus Flower Tray",
          "type": "product",
        },
        {
          "id": "6a41aa3bc091bcebec0d6ec5",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1782688515/siri-arts-crafts/products/esqsuglwg5tt4zc63l1e.jpg",
          "matchSource": "fallback_new",
          "price": 999,
          "score": 1,
          "slug": "dryfruits-gift-pack",
          "title": "Dryfruits Gift Pack",
          "type": "product",
        },
        {
          "id": "6a41a943c091bcebec0d6eb0",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1782687971/siri-arts-crafts/products/zkb3cvjwojgvllkarxyx.jpg",
          "matchSource": "fallback_new",
          "price": 1499,
          "score": 1,
          "slug": "golden-tray-decoration",
          "title": "Golden Tray Decoration",
          "type": "product",
        },
      ],
      "popularChoices": [
        {
          "id": "6a42dc1cf2886846ac840107",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1782766472/siri-arts-crafts/products/nszpsvqskv0pyoyn2a3z.jpg",
          "matchSource": "fallback_popular",
          "price": 2499,
          "score": 1,
          "slug": "golden-dry-fruit-tray",
          "title": "Golden Dry Fruit Tray",
          "type": "product",
        },
        {
          "id": "6a19cb169875c9a89386d920",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024558/eventdecor_migration/hgvuv234fqdoa2b05mul.jpg",
          "matchSource": "fallback_popular",
          "price": 1500,
          "score": 1,
          "slug": "wooden-wedding-ring-tray",
          "title": "Wooden Wedding Ring Tray",
          "type": "product",
        },
        {
          "id": "6a275711dccad738269ad33e",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1780963058/siri-arts-crafts/products/qzze8coxteocr9wzqbim.jpg",
          "matchSource": "fallback_popular",
          "price": 2000,
          "score": 1,
          "slug": "ganesh-coconut-decor",
          "title": "Ganesh Coconut Decor",
          "type": "product",
        },
        {
          "id": "6a1c3fd6d5e8db93a79944bc",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1780962210/siri-arts-crafts/products/cum5wuqalp5hq5ia0kuc.jpg",
          "matchSource": "fallback_popular",
          "price": 999,
          "score": 1,
          "slug": "beaded-heart-coconut",
          "title": "Beaded Heart Coconut",
          "type": "product",
        },
      ],
      "similarIdeas": [
        {
          "id": "6a0c74fa9b8633afb920de7b",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024546/eventdecor_migration/dakfqhkzlgqw5vjkfg6v.jpg",
          "matchSource": "fallback_popular",
          "price": 1500,
          "score": 1,
          "slug": "floral-jewelry-tray",
          "title": "Floral Jewelry Tray",
          "type": "product",
        },
        {
          "id": "6a0c764b9b8633afb920deb4",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024549/eventdecor_migration/os7ab4jtrh8y5vikq3z2.jpg",
          "matchSource": "fallback_popular",
          "price": 750,
          "score": 1,
          "slug": "green-coconut-decor",
          "title": "Green Coconut Decor",
          "type": "product",
        },
        {
          "id": "6a3c31738d7a02cb71a1f5ae",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1782329628/siri-arts-crafts/products/vvuj6q3p1ynudews1f8k.jpg",
          "matchSource": "fallback_popular",
          "price": 999,
          "score": 1,
          "slug": "chocolate-gift-favors",
          "title": "Chocolate Gift Favors",
          "type": "product",
        },
        {
          "id": "6a42df9df2886846ac840216",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1782767385/siri-arts-crafts/products/eposyswutxwdhpcrs2kc.jpg",
          "matchSource": "fallback_popular",
          "price": 2999,
          "score": 1,
          "slug": "pooja-thali-arrangement",
          "title": "Pooja Thali Arrangement",
          "type": "product",
        },
      ],
      "trending": [
        {
          "id": "6a41ad47c091bcebec0d70e8",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1782689039/siri-arts-crafts/products/bhfwpcfeiepkydwz39db.jpg",
          "matchSource": "fallback_new",
          "price": 4999,
          "score": 1,
          "slug": "dry-fruit-gift-boxes",
          "title": "Almond Gift Boxes",
          "type": "product",
        },
        {
          "id": "6a41aa3bc091bcebec0d6ec5",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1782688515/siri-arts-crafts/products/esqsuglwg5tt4zc63l1e.jpg",
          "matchSource": "fallback_new",
          "price": 999,
          "score": 1,
          "slug": "dryfruits-gift-pack",
          "title": "Dryfruits Gift Pack",
          "type": "product",
        },
        {
          "id": "6a41a9d2c091bcebec0d6eba",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1782688082/siri-arts-crafts/products/eknlhvsv8squgg8t69b2.jpg",
          "matchSource": "fallback_new",
          "price": 3999,
          "score": 1,
          "slug": "wooden-hamper-gift-set",
          "title": "Wooden Hamper Gift Set",
          "type": "product",
        },
        {
          "id": "6a41a943c091bcebec0d6eb0",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1782687971/siri-arts-crafts/products/zkb3cvjwojgvllkarxyx.jpg",
          "matchSource": "fallback_new",
          "price": 1499,
          "score": 1,
          "slug": "golden-tray-decoration",
          "title": "Golden Tray Decoration",
          "type": "product",
        },
      ],
    },
    "total": 0,
  },
  "success": true,
}
`;

exports[`Search Endpoints - Exact Ranking & Snapshot Validation GET /api/v1/search/results should perfectly match ranking & results for full search: "Telugu Script Search" 1`] = `
{
  "data": {
    "expertResponse": "Here are some stunning wedding decoration ideas for your ceremony. You can filter them by budget using the price controls.",
    "intentSummary": "Wedding Ideas",
    "isFallback": false,
    "items": [],
    "limit": 10,
    "page": 1,
    "predictedCategories": [
      "Wedding",
    ],
    "query": "పెళ్లి డెకరేషన్",
    "recommendations": {
      "bestMatches": [],
      "budgetFriendly": [],
      "popularChoices": [],
      "similarIdeas": [],
      "trending": [],
    },
    "total": 0,
  },
  "success": true,
}
`;

exports[`Search Endpoints - Exact Ranking & Snapshot Validation GET /api/v1/search/results should perfectly match ranking & results for full search: "Transliterated Telugu Search" 1`] = `
{
  "data": {
    "expertResponse": "Here are some stunning wedding decoration ideas for your ceremony. You can filter them by budget using the price controls.",
    "intentSummary": "Wedding Ideas",
    "isFallback": false,
    "items": [],
    "limit": 10,
    "page": 1,
    "predictedCategories": [
      "Wedding",
    ],
    "query": "pelli decoration",
    "recommendations": {
      "bestMatches": [],
      "budgetFriendly": [],
      "popularChoices": [],
      "similarIdeas": [],
      "trending": [],
    },
    "total": 0,
  },
  "success": true,
}
`;

exports[`Search Endpoints - Exact Ranking & Snapshot Validation GET /api/v1/search/results should perfectly match results when applying explicit filters (sort, categories) 1`] = `
{
  "data": {
    "expertResponse": "Here are some stunning traditional traditional decoration ideas for your ceremony. You can filter them by budget using the price controls.",
    "intentSummary": "Traditional Traditional Ideas",
    "isFallback": false,
    "items": [],
    "limit": 5,
    "page": 1,
    "predictedCategories": [
      "Traditional",
    ],
    "query": "traditional",
    "recommendations": {
      "bestMatches": [],
      "budgetFriendly": [],
      "popularChoices": [],
      "similarIdeas": [],
      "trending": [],
    },
    "total": 0,
  },
  "success": true,
}
`;
